# dab_training

./: README.md  databricks.yml
.github/workflows/: cicd.yml
clusters/: dab_clusters.yml
dab_examples/: .gitignore  README.md
dab_examples/clusters/: dab_clusters.yml
dbt_dbx/: README.md  databricks.yml  dbt_project.yml  profile_template.yml
jobs/: conditional_dependency_task_serverless.job.yml  double_task_diff_clusters.job.yml  double_task_serverless.job.yml  job_2.job.yml  passing_parameters_between_jobs.job.yml  passing_parameters_between_tasks.job.yml  simple_parameter.job.yml  simple_serverless.job.yml
notebooks/: hello.ipynb  notebook.ipynb  notebook_parameter.ipynb
resources/: cluster_parameters.job.yml  conditional_dependency_task_serverless.job.yml  double_task_diff_clusters.job.yml  double_task_serverless.job.yml  init_project.job.yml  job_2.job.yml  passing_parameters_between_jobs.job.yml  passing_parameters_between_tasks.job.yml  simple_parameter.job.yml  simple_serverless.job.yml
src/: notebook.ipynb  notebook_2.ipynb  notebook_3.ipynb  notebook_parameter.ipynb  notebook_task_parameter.ipynb
wheel_poetry/: README.md  databricks.yml
wheel_poetry/my_functions/mymath/: README.md  pyproject.toml
wheel_uv/: README.md  databricks.yml
wheel_uv/my_functions/consumer/: README.md  pyproject.toml
wheel_uv_serverless/: README.md  databricks.yml
wheel_uv_serverless/my_functions/consumer/: pyproject.toml
wheel_uv_serverless/my_functions/consumer/src/consumer/: main.py
wheel_uv_serverless/my_functions/mymath/: README.md  pyproject.toml
wheel_uv_serverless/my_functions/mymath/src/mymath/: main.py
yellow_nyc/: databricks.yml
(+26 files in other folders)
