[project]
name = "consumer"
version = "0.1.0"
description = ""
authors = [
    {name = "David Flores",email = "david.flores@sunnnydata.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mymath>=0.1.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
