[project]
name = "consumer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Flores", email = "david.flores@sunnnydata.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "mymath>=0.1.0",
]

[project.scripts]
consumer = "consumer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
