[project]
name = "mymath"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Flores", email = "david.flores@sunnnydata.ai" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mymath = "mymath:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
